--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
 
-        "mongofill/mongofill": "dev-master@dev"
+        "mongofill/mongofill": "dev-master@dev",
+        "twig/extensions": "^1.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
