--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -57,3 +57,8 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+fos_user:
+    db_driver: mongodb # other valid values are 'orm', 'couchdb' and 'propel'
+    firewall_name: main
+    user_class: EFormsBundle\Document\User
